<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
        <relativePath/>
    </parent>

    <groupId>com.github.filefusion</groupId>
    <artifactId>file-fusion</artifactId>
    <version>1.0.0</version>
    <name>File Fusion</name>
    <description>Cherish the Beautiful Life</description>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <java.version>21</java.version>
        <ulid.version>8.3.0</ulid.version>
        <jjwt.version>0.12.6</jjwt.version>
        <bouncycastle.version>1.80</bouncycastle.version>
        <commons-exec.version>1.4.0</commons-exec.version>
        <redisson.version>3.45.0</redisson.version>
        <hikaricp.version>6.2.1</hikaricp.version>
        <flyway.version>11.3.4</flyway.version>
        <mysql.version>9.2.0</mysql.version>
        <mariadb.version>3.5.2</mariadb.version>
        <postgresql.version>42.7.5</postgresql.version>
        <h2.version>2.3.232</h2.version>
        <lombok.version>1.18.36</lombok.version>
        <smart-doc.version>3.0.9</smart-doc.version>
        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
    </properties>

    <modules>
        <module>backend</module>
        <module>frontend</module>
    </modules>

</project>
